# docs/swagger.json
@@ -17,6 +17,41 @@
     "host": "ws-yoginara-2024-479b633e2c8b.herokuapp.com",
     "basePath": "/",
     "paths": {
+        "/delete/{id}": {
+            "delete": {
+                "description": "Hapus data presensi.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Presensi"
+                ],
+                "summary": "Delete data presensi.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Masukan ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/ins": {
             "post": {
                 "description": "Input data presensi.",
